--- a/mAIstro_tools_included.ipynb
+++ b/mAIstro_tools_included.ipynb
@@ -10900,22 +10900,32 @@
    "outputs": [],
    "source": [
     "multi_task_prompt_1 = \"\"\"\n",
-    "Use TotalSegmentator with the total task to segment only the spleen from the CT scans (one at a time) available here: \"/path/to/test_multi_tasking/multi_task_prompt_1/ct_scans\". \n",
-    "Save the mask files to \"/path/to/test_multi_tasking/multi_task_prompt_1/masks\".\n",
-    "Rename each mask file to have the exact same filename with the corresponding CT scan.\n",
-    "Use the CT scans and the corresponding spleen masks to extract radiomic features. \n",
-    "Save the resulting radiomic features CSV file in here: \"/path/to/ouput_directory\".\n",
-    "Use the saved csv file with the radiomic features to perform Exploratory Data Analysis, without producing plots, on the extracted features and save all EDA results in this directory: \"/path/to/ouput_directory\".\n",
-    "Deploy the appropriate agent for each task.\n",
+    "For each CT scan file located in the folder: \"/path/to/test_multi_tasking/multi_task_prompt_1/ct_scans\":\n",
+    "    1) Use TotalSegmentator with the total task to segment only the spleen.\n",
+    "    2) After segmentation, do not keep the default filename (e.g., spleen.nii.gz). Instead, rename the spleen mask so that its filename exactly matches the original CT scan filename (e.g., if the CT scan was 1.nii.gz, rename the mask to 1.nii.gz).\n",
+    "    3) Save the renamed mask in the folder: \"/path/to/test_multi_tasking/multi_task_prompt_1/masks\".\n",
+    "Repeat the steps above for every CT scan in the folder.\n",
+    "Once all spleen masks are saved and correctly renamed:\n",
+    "    4)Use each CT scan and its corresponding spleen mask to extract radiomic features.\n",
+    "    5)Save the radiomic features into a single CSV file in: \"/path/to/ouput_directory\".\n",
+    "    6)Perform Exploratory Data Analysis (EDA) on the extracted radiomic features, without generating plots.\n",
+    "    7)Save all EDA results into: \"/path/to/ouput_directory\".\n",
     "\"\"\"\n",
     "\n",
     "multi_task_prompt_2 = \"\"\"\n",
-    "Using the nnUNet dataset 135, 3d full res fold_all model, segment the mpMRI scans in: \"/path/to/test_multi_tasking/multi_task_prompt_2/mpMRI_scans\". \n",
-    "Save the mask files to: \"/path/to/test_multi_tasking/multi_task_prompt_2/masks\"\n",
-    "Use the MRI scans and the corresponding masks to extract radiomic features for each label in the mask files. Use the followng filters: Exponential, Original, Wavelet.\n",
-    "Extract radiomic features only from the T1 MRI scans. For example, the mask name for the first case will be 'BraTS2021_00000.nii.gz', the corresponding T1 image name will be 'BraTS2021_00000_0000.nii.gz'.\n",
-    "Save the resulting radiomic features CSV files in this folder: \"/path/to/ouput_directory\".\n",
-    "Use the saved csv files with the radiomic features to perform Exploratory Data Analysis. Save EDA results for each label in subfolders, in this directory:\"/path/to/ouput_directory\".\n",
+    "Using the nnUNet dataset 135, 3d full res, fold_all model, segment the mpMRI scans located in: \"/path/to/test_multi_tasking/multi_task_prompt_2/mpMRI_scans\".\n",
+    "Save the mask files to: \"/path/to/test_multi_tasking/multi_task_prompt_2/masks\".\n",
+    "After segmentation:\n",
+    "    1)For each predicted mask file (e.g., BraTS2021_00000.nii.gz), rename the mask file so that it matches the corresponding T1 image filename.\n",
+    "    For example:\n",
+    "    If the mask is BraTS2021_00000.nii.gz and the corresponding T1 scan is BraTS2021_00000_0000.nii.gz, then rename the mask file to BraTS2021_00000_0000.nii.gz (i.e., copy the T1 filename exactly).\n",
+    "Once all mask files are correctly renamed:\n",
+    "    2)Use the T1-weighted MRI scans available here: \"/path/to/test_multi_tasking/multi_task_prompt_2/T1_scans\" and their corresponding masks available here: \"/path/to/test_multi_tasking/multi_task_prompt_2/masks\"\n",
+    "    to extract radiomic features for each label in the masks.\n",
+    "    Use the following image filters: Exponential, Original, Wavelet.\n",
+    "    3)Save each resulting radiomic features CSV file in: \"/path/to/ouput_directory\".\n",
+    "    4)Perform Exploratory Data Analysis (EDA) for the extracted features separately for each label. Do not generate any plots.\n",
+    "    Save the EDA results for each label in subfolders inside: \"/path/to/ouput_directory\".\n",
     "\"\"\"\n",
     "\n",
     "multi_task_prompt_3 = \"\"\"\n",
