--- a/mAIstro.ipynb
+++ b/mAIstro.ipynb
@@ -526,7 +526,7 @@
     "\n",
     "#Prompt 2 segmenting three organs (CT)\n",
     "totalsegmentator_prompt_2 = \"\"\"\n",
-    "Use TotalSegmentator with the total task to segment only the liver, stomach and kidneys in the CT scan found at /path/to/ct_input  \n",
+    "Use TotalSegmentator with the total task to segment only the liver, stomach and right kidney in the CT scan found at /path/to/ct_input  \n",
     "Save the mask here /path/to/ouput_directory\n",
     "\"\"\"\n",
     "\n",
