--- a/mAIstro.ipynb
+++ b/mAIstro.ipynb
@@ -148,7 +148,7 @@
     "    additional_authorized_imports=['os', 'pandas'],\n",
     "    name=\"radiomic_extraction_agent\",\n",
     "    description=\"Extracts radiomic features from medical images and saves them as CSV files\",\n",
-    "    max_steps = 5\n",
+    "    max_steps = 15\n",
     ")\n",
     "#EDA Agent\n",
     "eda_agent = CodeAgent(\n",
@@ -158,7 +158,7 @@
     "    additional_authorized_imports=['os', 'pandas'],\n",
     "    name=\"eda_agent\",\n",
     "    description=\"Performs comprehensive exploratory data analysis\",\n",
-    "    max_steps = 5\n",
+    "    max_steps = 15\n",
     ")\n",
     "#Feature Importance Agent\n",
     "feature_selection_agent = CodeAgent(\n",
@@ -168,7 +168,7 @@
     "    additional_authorized_imports=['os', 'pandas'],\n",
     "    name=\"feature_importance_agent\",\n",
     "    description=\"Performs feature importance analysis and exports the most important features to CSV files\",\n",
-    "    max_steps = 5\n",
+    "    max_steps = 15\n",
     ")\n",
     "#nnUNet Agent\n",
     "nnunet_agent = agent = CodeAgent(\n",
@@ -178,7 +178,7 @@
     "    additional_authorized_imports=['re', 'subprocess', 'os'],\n",
     "    name=\"nnunet_agent\",\n",
     "    description=\"Uses the nnUNet framework for training and inference of medical image segmentation models\",\n",
-    "    max_steps = 5\n",
+    "    max_steps = 15\n",
     ")\n",
     "#TotalSegmentator Agent\n",
     "totalsegmentator_agent = CodeAgent(\n",
@@ -188,7 +188,7 @@
     "    additional_authorized_imports=['os'],\n",
     "    name=\"totalsegmentator_agent\",\n",
     "    description=\"Utilizes the TotalSegmentator framework to segment organs and tissues in medical imaging data\",\n",
-    "    max_steps = 5\n",
+    "    max_steps = 15\n",
     ")\n",
     "#PyCaret classification Agent (tabulated data)\n",
     "pycaret_classification_agent = CodeAgent(\n",
@@ -200,7 +200,7 @@
     "                    'plot_model', 'interpret_model', 'cuml', 'pandas'],\n",
     "    name=\"pycaret_classification_agent\",\n",
     "    description=\"Builds and deploys classification models using the PyCaret framework on tabular data inputs\",\n",
-    "    max_steps = 5\n",
+    "    max_steps = 15\n",
     ")\n",
     "#PyCaret regression Agent (tabulated data)\n",
     "pycaret_regression_agent = CodeAgent(\n",
@@ -212,7 +212,7 @@
     "                    'plot_model', 'interpret_model', 'cuml', 'pandas'],\n",
     "    name=\"pycaret_regression_agent\",\n",
     "    description=\"Builds and deploys regression models using the PyCaret framework on tabular data inputs\",\n",
-    "    max_steps = 5\n",
+    "    max_steps = 15\n",
     ")\n",
     "#Image classification Agent\n",
     "image_classification_agent = CodeAgent(\n",
@@ -224,7 +224,7 @@
     "    additional_authorized_imports=['os'],\n",
     "    name=\"image_classification_agent\",\n",
     "    description=\"Builds and deploys ResNet, Inceptionv3 and VGG16 image classification models\",\n",
-    "    max_steps = 5\n",
+    "    max_steps = 15\n",
     ")\n",
     "\n",
     "#Master Agent\n",
@@ -237,7 +237,7 @@
     "    add_base_tools=True,\n",
     "    additional_authorized_imports=['os'],\n",
     "    name=\"master_agent\",\n",
-    "    max_steps = 15\n",
+    "    max_steps = 20\n",
     ")"
    ]
   },
@@ -376,6 +376,7 @@
     "Perform comprehensive EDA for the file: data/tabulated_datasets/regression/Life-Expectancy-Data-Updated.csv. \n",
     "Save the output here: \"tests/test_eda_agent/life_expectancy_eda_results\".\n",
     "\"\"\"\n",
+    "\n",
     "master_agent.run(eda_prompt_1) "
    ]
   },
@@ -426,7 +427,7 @@
     "Save two csv files with the top 10 and 15 features here: tests/test_feature_selection_agent/results_life_expectancy.\n",
     "Targert column is \"Life_expectancy\". Create plots.'\n",
     "\"\"\"\n",
-    "master_agent.run(fia_prompt_2) "
+    "master_agent.run(fia_prompt_1) "
    ]
   },
   {
@@ -598,7 +599,7 @@
     "Deploy the proper agent for this task.\n",
     "\"\"\"\n",
     "\n",
-    "master_agent.run(ict_prompt_2) "
+    "master_agent.run(ict_prompt_1) "
    ]
   },
   {
@@ -653,7 +654,7 @@
     "Output directory: tests/test_regression_agent/inference_results/results_prompt_2\n",
     "\"\"\"\n",
     "\n",
-    "master_agent.run(irt_prompt_2) "
+    "master_agent.run(irt_prompt_1) "
    ]
   },
   {
@@ -748,7 +749,7 @@
    "source": [
     "#Prompt for inference with resnet18 model - pneumoniamnist_28 dataset\n",
     "ici_prompt_1 = \"\"\"\n",
-    "Use the resnet-18 model available here: \"tests/test_image_classification_agent/pneumoniamnist_28/output/resnet18_ict_prompt_1/best_model.pt\", \n",
+    "Use the resnet18 model available here: \"tests/test_image_classification_agent/pneumoniamnist_28/output/resnet18_ict_prompt_1/best_model.pt\", \n",
     "to classify the images in this folder: \"data/image_datasets_inference/pneumoniamnist_28_inference/test_images\".\n",
     "The number of classes is 2. \n",
     "The ground truth labels for the evaluation are availabe here:\"data/image_datasets_inference/pneumoniamnist_28_inference/gt_test_labels.csv\".\n",
@@ -818,17 +819,39 @@
    "outputs": [],
    "source": [
     "multi_task_prompt_1 = \"\"\"\n",
-    "For each CT scan file located in the folder: \"tests/test_multi_tasking/multi_task_prompt_1/ct_scans\":\n",
-    "    1) Use TotalSegmentator with the total task to segment only the spleen.\n",
-    "    2) After segmentation, do not keep the default filename (e.g., spleen.nii.gz). Instead, rename the spleen mask so that its filename exactly matches the original CT scan filename (e.g., if the CT scan was 1.nii.gz, rename the mask to 1.nii.gz).\n",
-    "    3) Save the renamed mask in the folder: \"tests/test_multi_tasking/multi_task_prompt_1/masks\".\n",
-    "Repeat the steps above for every CT scan in the folder.\n",
-    "Once all spleen masks are saved and correctly renamed:\n",
-    "    4)Use each CT scan and its corresponding spleen mask to extract radiomic features.\n",
-    "    5)Save the radiomic features into a single CSV file in: \"tests/test_multi_tasking/multi_task_prompt_1/radiomic_features\".\n",
-    "    6)Perform Exploratory Data Analysis (EDA) on the extracted radiomic features, without generating plots.\n",
-    "    7)Save all EDA results into: \"tests/test_multi_tasking/multi_task_prompt_1/eda_results\".\n",
+    "PHASE 1: SPLEEN SEGMENTATION\n",
+    "  For each CT scan file in \n",
+    "  \"tests/test_multi_tasking/multi_task_prompt_1/ct_scans\":\n",
+    "\n",
+    "  1. Run TotalSegmentator with the total task to segment only the spleen.\n",
+    "\n",
+    "  2. Locate the generated spleen mask (typically named \"spleen.nii.gz\" in\n",
+    "  the output directory)\n",
+    "\n",
+    "  3. Rename the spleen mask to match the original CT scan filename exactly:\n",
+    "  - Original: \"1.nii.gz\" → Mask: \"1.nii.gz\"\n",
+    "  - Original: \"patient_001.nii.gz\" → Mask: \"patient_001.nii.gz\"\n",
+    "\n",
+    "  4. Move the renamed mask to:\n",
+    "  \"tests/test_multi_tasking/multi_task_prompt_1/masks\"\n",
+    "\n",
+    "  5. Clean up temporary segmentation files (keep only the renamed spleen \n",
+    "  mask)\n",
+    "\n",
+    "PHASE 2: RADIOMIC FEATURE EXTRACTION\n",
+    "  After ALL spleen masks are successfully created:\n",
+    "  6. For each CT scan and its corresponding mask:\n",
+    "  - Extract radiomic features \n",
+    "  7. Combine all radiomic features into a single CSV file\n",
+    "  - Include a column identifying the source CT scan filename\n",
+    "  - Save as: \"tests/test_multi_tasking/multi_task_prompt_1/radiomic_features/radiomic_features.csv\"\n",
+    "\n",
+    "PHASE 3: EXPLORATORY DATA ANALYSIS\n",
+    "  8. Load the radiomic features CSV file\n",
+    "  9. Perform EDA (NO PLOTS)\n",
+    "  10. Save all EDA results in: \"tests/test_multi_tasking/multi_task_prompt_1/eda_results/\"\n",
     "\"\"\"\n",
+    "\n",
     "multi_task_prompt_2 = \"\"\"\n",
     "Using the nnUNet dataset 135, 3d full res, fold_all model, segment the mpMRI scans located in: \"tests/test_multi_tasking/multi_task_prompt_2/mpMRI_scans\".\n",
     "Save the mask files to: \"tests/test_multi_tasking/multi_task_prompt_2/masks\".\n",
