--- a/mAIstro.ipynb
+++ b/mAIstro.ipynb
@@ -886,7 +886,7 @@
     "\n",
     "multi_task_prompt_5 = \"\"\"\n",
     "Train an InceptionV3 classification model using data available in the following directory: \"data/image_datasets/dataset_pneumoniamnist_128\".\n",
-    "The number of classes is 2. Train for 100 epochs. Set patience to 10.\n",
+    "The number of classes is 2. Train for 200 epochs. Set patience to 20. Do not use pretrained weights.\n",
     "Then, use the trained model to classify images in this directory: \"data/image_datasets_inference/pneumoniamnist_128_inference/test_images\".\n",
     "The ground truth labels for the evaluation are availabe here: \"data/image_datasets_inference/pneumoniamnist_128_inference/gt_test_labels.csv\".\n",
     "Save the trained model and inference results in this directory: \"tests/test_multi_tasking/multi_task_prompt_5\".\n",
